# AgenticAI_Assignment2

./: .gitignore  README.md  prompts.py  pyproject.toml  requirements.txt  run.py  run.sh  utils.py
data/: tasks_test.jsonl
