[project]
name = "webvoyager"
version = "0.1.0"
description = ""
authors = [
    {name = "BlackWaterGua",email = "watermalon394@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (==10.1.0)",
    "openai (>=1.61.1,<2.0.0)",
    "selenium (>=4.28.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
